--- a/index.html
+++ b/index.html
@@ -1,33 +1,101 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home | Ikan Asin Monitoring</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- custom style -->
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Ikan Asin App</title>
 </head>
 
 <body>
-    <div class="container">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="nav">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto ">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">FAQ</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0 ">
+
+                    <button class="btn  my-2 my-sm-0" type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <!-- End Off Navbar -->
+
+    <!-- jumbotron -->
+    <div class="jumbotron">
+        <div class="container" style="margin-top: 70px;">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <h1>Jemuran Ikan Asin Monitoring App</h1>
+                    <hr>
+                    <p class="lead mb-5">Monitor Alat Jemuran Ikan Asin Otomatis Berbasis Mikrokontroller Lorem ipsum
+                        dolor sit
+                        amet
+                        consectetur adipisicing elit. Minus dolorum voluptatibus consectetur cupiditate, deserunt ad
+                        itaque
+                        praesentium nemo aut odio dicta, voluptate alias non nulla, tempore eaque commodi dolore.
+                        Itaque.</p>
+
+                    <p class="mt-5">More info</p>
+                    <p class="lead mt-2">
+                        <a href="#"><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i></a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
+    <!-- jumbotron -->
+    <!-- section about -->
+    <section id="about">
+        <div class="container">
+            <div class="row mb-3 justify-content-center">
+                <div class="col-lg-10">
+                    <h3>About</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum! Sint
+                        at
+                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga quo
+                        earum
+                        minus accusantium.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of section about -->
 
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/jquery-3.3.1.slim.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    <script src="js/popper.min.js">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    <script src="js/bootstrap.js">
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
