finishing single page app

--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto ">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="#">Tentang <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Fitur</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ</a>
+                        <a class="nav-link" href="#">Cara Pakai</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
 
-                    <button class="btn  my-2 my-sm-0" type="submit">Login</button>
+                    <button class="btn my-2 my-sm-0" type="submit">Login</button>
                 </form>
             </div>
         </div>
@@ -60,7 +60,7 @@
                         praesentium nemo aut odio dicta, voluptate alias non nulla, tempore eaque commodi dolore.
                         Itaque.</p>
 
-                    <p class="mt-5">More info</p>
+                    <p class="mt-5">Lihat Selengkapnya...</p>
                     <p class="lead mt-2">
                         <a href="#"><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i></a>
                     </p>
@@ -72,20 +72,278 @@
     <!-- section about -->
     <section id="about">
         <div class="container">
-            <div class="row mb-3 justify-content-center">
-                <div class="col-lg-10">
-                    <h3>About</h3>
+            <div class="row mb-3">
+                <div class="col-lg-12">
+                    <h3 class="text-center">Tentang</h3>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum! Sint
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum!
+                        Sint
                         at
-                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga quo
+                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga
+                        quo
+                        earum
+                        minus accusantium.</p>
+                </div>
+                <div class="col-md-5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum!
+                        Sint
+                        at
+                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga
+                        quo
                         earum
                         minus accusantium.</p>
                 </div>
             </div>
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-10">
+                    <!--Carousel Wrapper-->
+                    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                        <!--Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                        </ol>
+                        <!--/.Indicators-->
+                        <!--Slides-->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <div class="view">
+                                    <img class="d-block w-100"
+                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
+                                        alt="First slide">
+                                    <div class="mask rgba-black-light"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Light mask</h3>
+                                    <p>First text</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view">
+                                    <img class="d-block w-100"
+                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
+                                        alt="Second slide">
+                                    <div class="mask rgba-black-strong"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Strong mask</h3>
+                                    <p>Secondary text</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <!--Mask color-->
+                                <div class="view">
+                                    <img class="d-block w-100"
+                                        src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
+                                    <div class="mask rgba-black-slight"></div>
+                                </div>
+                                <div class="carousel-caption">
+                                    <h3 class="h3-responsive">Slight mask</h3>
+                                    <p>Third text</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--/.Slides-->
+                        <!--Controls-->
+                        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        <!--/.Controls-->
+                    </div>
+                    <!--/.Carousel Wrapper-->
+                </div>
+            </div>
         </div>
+
+
+
+
     </section>
     <!-- end of section about -->
+
+    <!-- section features -->
+
+    <section id="features">
+        <div class="container">
+            <div class="row mb-3 pt-5">
+                <div class="col-lg-12">
+                    <h3 class="text-center">Fitur</h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row-md-10 mt-5 justify-content-center">
+                <div class="card-group mr-2">
+                    <div class="card">
+                        <img src="img/about/clock.png" class="card-img-top" alt="time">
+                        <div class="card-body">
+                            <h5 class="card-title">Efektif & Efisien</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/about/money.png" class="card-img-top" alt="money">
+                        <div class="card-body">
+                            <h5 class="card-title">Produktifitas</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/about/product.png" class="card-img-top" alt="product">
+                        <div class="card-body">
+                            <h5 class="card-title">Kualitas Produk</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center mt-3 pb-5">
+                    <div class="col-md-4">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item active">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item active">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item active">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Morbi leo risus</li>
+                            <li class="list-group-item">Porta ac consectetur ac</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of section features -->
+
+    <!-- Section FAQ  -->
+    <section id="faq">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-7 text-center mb-5">
+                    <h3>Cara Pakai</h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row mb-5 justify-content-between">
+                <div class="col-md-7">
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse"
+                                        data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        Penggunaan Alat
+                                    </button>
+                                </h2>
+                            </div>
+
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
+                                    accusamus labore sustainable VHS.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        Penggunaan Website
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
+                                data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
+                                    accusamus labore sustainable VHS.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        Lain-Lain
+                                    </button>
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                                data-parent="#accordionExample">
+                                <div class="card-body">
+
+                                    ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                                    farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them
+                                    accusamus labore sustainable VHS.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+                        <div class="card-header">Tim Ikan Asin App</div>
+                        <div class="card-body">
+                            <h5 class="card-title">Alamat :</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!-- End of FAQ -->
+
+    <!-- Footer -->
+    <!-- Footer -->
+    <footer class="page-footer font-small blue">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            Tim Ikan Asin App</a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+    <!-- end of Footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
