--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="nav">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#home">Ikan Asin App</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,18 +27,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto ">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Tentang <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#about">Tentang <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Fitur</a>
+                        <a class="nav-link" href="#features">Fitur</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cara Pakai</a>
+                        <a class="nav-link" href="#faq">Cara Pakai</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
 
-                    <button class="btn my-2 my-sm-0" type="submit">Login</button>
+                    <button class="btn my-2 my-sm-0" type="submit">Monitoring</button>
                 </form>
             </div>
         </div>
@@ -46,7 +46,7 @@
     <!-- End Off Navbar -->
 
     <!-- jumbotron -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="home">
         <div class="container" style="margin-top: 70px;">
             <div class="row justify-content-center">
                 <div class="col-md-8">
@@ -62,7 +62,7 @@
 
                     <p class="mt-5">Lihat Selengkapnya...</p>
                     <p class="lead mt-2">
-                        <a href="#"><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i></a>
+                        <a href="#about"><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i></a>
                     </p>
                 </div>
             </div>
@@ -347,7 +347,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.3.1.slim.min.js">
+    <script src="js/jquery-3.4.1.min.js">
     </script>
     <script src="js/popper.min.js">
     </script>
