--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
 
-                    <button class="btn my-2 my-sm-0" type="submit">Monitoring</button>
+                    <a href="monitoring.html" class="btn my-2 my-sm-0"></a>
                 </form>
             </div>
         </div>
