--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
-                    <a href="monitoring.html" class="btn my-2 my-sm-0">Monitoring</a>
+                    <a href="https://subangkitaji.github.io/ikanasinapp/monitoring.html" class="btn my-2 my-sm-0">Monitoring</a>
                 </form>
             </div>
         </div>
