--- a/monitoring.html
+++ b/monitoring.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
+
     <div class="container">
         <h2 class="judul text-center mt-5">Halaman Monitoring</h2>
         <hr style="width: 100px; height: 3px; color: rgb(32, 31, 31);">
         <!-- navbar -->
-        <nav class="navbar navbar-light bg-faded justify-content-center flex-nowrap">
+        <nav class="navbar navbar-light bg-faded justify-content-center flex-nowrap" id="navitor">
             <ul class="nav navbar-nav flex-row">
-                <li class="nav-item"><a class="nav-link pr-3 pl-3" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link pr-3 pl-3" href="#">Suhu</a></li>
-                <li class="nav-item"><a class="nav-link pr-3 pl-3" href="#">Kelembapan</a></li>
-                <li class="nav-item"><a class="nav-link pr-3 pl-3" href="#">Cuaca</a></li>
+                <li class="nav-item bd"><a class="nav-link pr-3 pl-3" style="text-transform: lowercase;"
+                        href="index.html">Kembali Ke Halaman Home <i class="fa fa-backward" aria-hidden="true"></i></a>
+                </li>
             </ul>
         </nav>
         <!-- end of navbar -->
@@ -84,6 +84,13 @@
 
         </div>
         <!-- End Of Data Sensor Terbaru -->
+        <!-- chart -->
+        <div class="row">
+            <div class="col-md">
+                <h4 class="text-center">Data Statistik Dari Semua Sensor</h4>
+                <hr style="width: 200px;">
+            </div>
+        </div>
         <div class="row mt-5 justify-content-center">
             <div class="col-md-6 ">
                 <iframe width="450" height="260" style="border: 1px solid #cccccc;"
@@ -105,6 +112,7 @@
                     src="https://thingspeak.com/channels/884462/charts/4?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=Kelembapan+Luar&type=line"></iframe>
             </div>
         </div>
+        <!-- end of chart -->
 
     </div>
 </body>
