adding rain data json

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
-                    <a href="https://subangkitaji.github.io/ikanasinapp/monitoring.html" class="btn my-2 my-sm-0">Monitoring</a>
+                    <a href="monitoring.html" class="btn my-2 my-sm-0">Monitoring</a>
                 </form>
             </div>
         </div>
@@ -49,15 +49,10 @@
         <div class="container" style="margin-top: 70px;">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h1>Jemuran Ikan Asin Monitoring App</h1>
+                    <h1>Jemuran Ikan Asin Web Applications</h1>
                     <hr>
-                    <p class="lead mb-5">Monitor Alat Jemuran Ikan Asin Otomatis Berbasis Mikrokontroller Lorem ipsum
-                        dolor sit
-                        amet
-                        consectetur adipisicing elit. Minus dolorum voluptatibus consectetur cupiditate, deserunt ad
-                        itaque
-                        praesentium nemo aut odio dicta, voluptate alias non nulla, tempore eaque commodi dolore.
-                        Itaque.</p>
+                    <p class="lead mb-5">Website Monitoring Alat Jemuran Ikan Asin Otomatis Berbasis Mikrokontroller.
+                    </p>
 
                     <p class="mt-5">Lihat Selengkapnya...</p>
                     <p class="lead mt-2">
@@ -79,22 +74,14 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum!
-                        Sint
-                        at
-                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga
-                        quo
-                        earum
-                        minus accusantium.</p>
+                    <p>Website ini merupakan website monitoring untuk alat jemuran ikan asin berbasis mikrokontroller
+                        yang dikembangkan oleh mahasiswa D3 Teknik Komputer Politeknik Harapan Bersama Kota Tegal. </p>
                 </div>
                 <div class="col-md-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum voluptates accusantium ipsum!
-                        Sint
-                        at
-                        obcaecati tenetur dolores nesciunt quae neque saepe laudantium quia, vitae cupiditate fuga
-                        quo
-                        earum
-                        minus accusantium.</p>
+                    <p>Mengapa menggunakan website ? karena menurut kami sudah seharusnya kita memanfaatkan teknologi
+                        dengan efektif untuk membantu meringankan pekerjaan manusia. Dengan adanya website monitoring
+                        maka kita bisa memantau keadaan alat jemuran ikan asin dimana saja dan kapan saja secara
+                        realtime.</p>
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
@@ -175,10 +162,12 @@
 
     <section id="features">
         <div class="container">
-            <div class="row mb-3 pt-5">
+            <div class="row mb-3 pt-5 justify-content-center">
                 <div class="col-lg-12">
                     <h3 class="text-center">Fitur</h3>
                     <hr>
+                    <p class="text-center">" beberapa fitur menarik yang bisa digunakan pada alat jemuran ikan asin
+                        otomatis"</p>
                 </div>
             </div>
             <div class="row-md-10 mt-5 justify-content-center">
@@ -186,7 +175,7 @@
                     <div class="card">
                         <img src="img/about/clock.png" class="card-img-top" alt="time">
                         <div class="card-body">
-                            <h5 class="card-title">Efektif & Efisien</h5>
+                            <h5 class="card-title">Realtime Monitoring</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural
                             </p>
 
@@ -195,7 +184,7 @@
                     <div class="card">
                         <img src="img/about/money.png" class="card-img-top" alt="money">
                         <div class="card-body">
-                            <h5 class="card-title">Produktifitas</h5>
+                            <h5 class="card-title">Chart</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to
                             </p>
 
